# crust_boot_you

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  GOALS.md  docker_build.sh  docker_run.sh  justfile
src/: absolue_existing_path.rs  app_traits.rs  cli.rs  constants.rs  file_management.rs  handle_commands.rs  lib.rs  logging.rs  main.rs  not_empty_text.rs  prelude.rs  template.rs  template_augmentation.rs  template_meta_data.rs  valid_placeholder_border.rs  valid_template_name.rs
src/app_traits/: file_manipulator.rs  path_provider.rs  path_resolver.rs
src/cli/: cli_loglevel.rs  from_cli_path.rs  init_kind.rs  load_cli_details.rs  non_file_path.rs  save_template.rs  subcommands.rs  template_cli_arg.rs
src/file_management/: file_node.rs  loaded_node.rs  node_entry_meta.rs  os_io_error.rs  read_source_target_node.rs  source_target_node.rs  write_transactions.rs
src/handle_commands/: load_pipeline.rs  testing_handling_of_commands.rs
src/snapshots/: crust_boot_you__template_meta_data__testing__detect_duplicate_serde_templat_for_meta_template.snap  crust_boot_you__template_meta_data__testing__from_app_to_serde_template_meta.snap  crust_boot_you__template_meta_data__testing__from_serde_to_template_meta_app.snap
src/template_augmentation/: augement_repository.rs  augment_repository.rs  augmentation_error.rs  console_fetcher.rs  regex_replacer.rs  template_extractation.rs  template_replacer.rs
src/template_meta_data/: serde_template_meta_data.rs  template.rs
tests/: copy_template_into.rs  delete_template.rs  dir_assert.rs  list_templates.rs  os_all_nodes_inside.rs  os_list_first_level_dir.rs  prove_of_file_test.rs  save_template.rs  save_template_as_file.rs
tests/common/: dir_asserts.rs  insta_utils.rs  mod.rs  setup.rs
tests/snapshots/: copy_template_into__copy_at_target.snap  copy_template_into__copy_err_cwd_not_empty.snap  copy_template_into__ignore_templating.snap  (+20 more)
xtask/: Cargo.toml  init.ron
(+76 files in other folders)
