[workspace]
members = ["xtask"]

[package]
name = "crust_boot_you"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.65.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace.dependencies]
clap = { version = "4.3.15", features = ["derive", "env"] }
anyhow = { version = "1.0.72", features = ["backtrace"] }
log = "0.4.19"
simplelog = "0.12.1"
serde = { version = "1.0.171", features = ["derive"] }

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
simplelog = { workspace = true }
serde = { workspace = true }
colored = "2.0.4"
const_format = "0.2.31"
fs_extra = "1.3.0"
once_cell = "1.18.0"
serde_json = "1.0.103"
thiserror = "1.0.43"

[dev-dependencies]
insta = { version = "1.31.0", features = ["json"] }
map-macro = "0.2.6"
mockall = "0.11.4"
pretty_assertions = "1.4.0"
