[workspace]
members = ["xtask"]

[package]
name = "crust_boot_you"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.65.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace.dependencies]
clap = { version = "4.3.15", features = ["derive", "env"] }
anyhow = { version = "1.0.72", features = ["backtrace"] }
log = "0.4.19"
simplelog = "0.12.1"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
simplelog = { workspace = true }
colored = "2.0.4"
const_format = "0.2.31"
fs_extra = "1.3.0"
once_cell = "1.18.0"
thiserror = "1.0.43"
path-absolutize = "3.1.0"

[dev-dependencies]
function_name = "0.3.0"
insta = { version = "1.31.0", features = ["json"] }
itertools = "0.11.0"
map-macro = "0.2.6"
mockall = "0.11.4"
walkdir = "2.3.3"
pretty_assertions = "1.4.0"
tempfile = "3.6.0"
